<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="text_title_activity_andela">About ALC</string>
    <string name="text_title_activity_my_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="text_btn_title_about_alc">About ALC</string>
    <string name="text_btn_title_my_profile">My Profile</string>
    <string name="text_welcome_title">Welcome to ALC 4.0</string>
    <string name="text_my_profile_picture">pictureProfile</string>
    <string name="text_title_name">Josué Isamuna Nkembo</string>
    <string name="text_track_title">Track :   Android</string>
    <string name="text_country_title">Country :  DR Congo</string>
    <string name="text_email_title">Email :  josamuna2009@gmail.com</string>
    <string name="text_title_phone_number">Phone Number :  243972727527</string>
    <string name="text_title_slack_username">Slack Username :  @jo7</string>
    <string name="back_action">back_action</string>
</resources>
