<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_my_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/my_profile_picture"
        android:layout_width="314dp"
        android:layout_height="196dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/text_my_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_profile"
        app:srcCompat="@drawable/josam_picture" />

    <TextView
        android:id="@+id/text_name_title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="clip_horizontal"
        android:text="@string/text_title_name"
        android:textAlignment="center"
        android:textColor="@color/colorCustom2"
        android:textSize="24sp"
        android:typeface="normal"
        app:fontFamily="@font/carter_one"
        app:layout_constraintEnd_toEndOf="@+id/my_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/my_profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/my_profile_picture" />

    <TextView
        android:id="@+id/text_separator_profil"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorCustom3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name_title" />

    <TextView
        android:id="@+id/text_title_track"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_track_title"
        app:layout_constraintEnd_toEndOf="@+id/text_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_separator_profil" />

    <TextView
        android:id="@+id/text_title_country"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_country_title"
        app:layout_constraintEnd_toEndOf="@+id/text_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title_track" />

    <TextView
        android:id="@+id/text_title_email"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_email_title"
        app:layout_constraintEnd_toEndOf="@+id/text_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title_country" />

    <TextView
        android:id="@+id/text_phone_number_title"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_title_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/text_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title_email" />

    <TextView
        android:id="@+id/text_slack_username_title"
        style="@android:style/TextAppearance.Material.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_title_slack_username"
        app:layout_constraintEnd_toEndOf="@+id/text_name_title"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_phone_number_title" />
</android.support.constraint.ConstraintLayout>