<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_activity_welcome"
        style="@android:style/TextAppearance.Holo.Widget.PopupMenu.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorCustom1"
        android:text="@string/text_btn_title_about_alc"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <Button
        android:id="@+id/btn_activity_my_profile"
        style="@android:style/TextAppearance.Holo.Widget.PopupMenu.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorCustom1"
        android:text="@string/text_btn_title_my_profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_activity_welcome"
        app:layout_constraintStart_toStartOf="@+id/btn_activity_welcome"
        app:layout_constraintTop_toBottomOf="@+id/btn_activity_welcome" />

    <TextView
        android:id="@+id/text_welcome"
        style="@android:style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/text_welcome_title"
        android:textAlignment="center"
        android:textSize="37sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="@font/carter_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>